# Sem3Py

./: .readthedocs.yml  README.md  main.py  setup.cfg  share.py  taylor_series_derivative.py  test.ipynb  test.py
Sem3Py/: Numerical.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html
docs/.ipynb_checkpoints copy/: index-checkpoint.html
docs/source/api/: Numerical.rst
html/: searchindex.js
src/Sem3Py/: Numerical.py  Optimization.py  __init__.py
