[metadata]
name = Sem3Py
version = 0.0.7
author = Sreehari Pulickamadhom Sreedhar
author_email = cb.sc.i5das20032@cb.students.amrita.edu
description = A package of functions used in Sem 3.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orectique/sem3py
project_urls =
    Bug Tracker = https://github.com/orectique/sem3py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src